--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.3.0",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
