--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
+    "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
