--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,13 +18,13 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.3.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "swr": "^2.1.0",
     "typescript": "4.9.5"
