--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
