--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.3.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
