feat: 🎸 Blog Post page almost done but left an error decode-jwt
Blog Post page almost done but left an error decode-jwt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
   "css.validate": false,
-  "cSpell.words": ["Fiverr", "headlessui", "Upwork", "লগইন", "সাইন"]
+  "cSpell.words": [
+    "Fiverr",
+    "headlessui",
+    "nextjs",
+    "progressbar",
+    "toastify",
+    "Upwork",
+    "লগইন",
+    "সাইন"
+  ]
 }
