--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-select": "^5.0.1",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
     "eslint": "8.36.0",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.1",
     "swr": "^2.1.0",
     "typescript": "4.9.5"
