--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.1",
     "swr": "^2.1.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
