--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.1",
+    "reading-time": "^1.5.0",
     "swr": "^2.1.0",
-    "typescript": "4.9.5",
-    "reading-time": "^1.5.0"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/js-cookie": "^3.0.3",
     "@types/nodemailer": "^6.4.7",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
