--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-select": "^5.0.1",
+    "blurhash": "^2.0.5",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
     "eslint": "8.36.0",
@@ -30,6 +31,7 @@
     "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
