--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-select": "^5.0.1",
+    "@vercel/analytics": "^1.0.0",
     "blurhash": "^2.0.5",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.1",
